<resources>
    <string name="app_name" translatable="false">CurrentWeather</string>

    <!-- Main info -->
    <string name="enter_city">Enter city</string>
    <string name="temperature_degree" translatable="false">%.1f°</string>
    <string name="no_data">No data</string>
    <string name="nan" translatable="false">NaN</string>

    <!-- Error message -->
    <string name="err_unknown">Unknown error</string>
    <string name="err_wrong_city_name">Wrong city name</string>
    <string name="err_no_connection">No internet connection</string>

    <!-- Details -->
    <string name="wind_name">Wind</string>
    <string name="wind_format">%1$.1f m/s, %2$s</string>
    <string name="wind_direction_n">North</string>
    <string name="wind_direction_ne">Northeast</string>
    <string name="wind_direction_nw">Northwest</string>
    <string name="wind_direction_s">South</string>
    <string name="wind_direction_se">Southeast</string>
    <string name="wind_direction_sw">Southwest</string>
    <string name="wind_direction_w">West</string>
    <string name="wind_direction_e">East</string>
    <string name="wind_direction_un">Unknown direction</string>
    <string name="pressure_name">Pressure</string>
    <string name="pressure_format">%d mm Hg</string>
    <string name="humidity_name">Humidity</string>
    <string name="humidity_format" translatable="false">%d%%</string>
    <string name="clouds_name">Clouds</string>
    <string name="clouds_format" translatable="false">%d%%</string>
    <string name="time_name">Time</string>
    <string name="time_format" translatable="false">HH:mm</string>
    <string name="sun_name">Sun</string>
    <string name="sun_format">from %1$s to %2$s</string>

    <!-- Forecast -->
    <string name="hour">%sh</string>
    <string name="millimeters">%.0f mm</string>
    <string name="legend_temp">Temperature, °C</string>
    <string name="legend_feels">Feels Like, °C</string>
    <string name="legend_rain">Rain, mm</string>
    <string name="legend_snow">Snow, mm</string>

    <!-- Widget -->
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="white">White</string>
    <string name="create_widget">Create widget</string>
    <string name="choose_widget_color">Choose widget color</string>
    <string name="temperature_widget" translatable="false">%.0f°</string>

    <!-- Mock strings -->
    <string name="hint_city_name" translatable="false">Omsk</string>
    <string name="hint_weather" translatable="false">14°</string>
    <string name="hint_description" translatable="false">Rain</string>
    <string name="hint_time" translatable="false">12:34:66</string>
    <string name="denotation" translatable="false">Denotation</string>
    <string name="value_text" translatable="false">Value</string>
    <string name="empty" translatable="false" />

</resources>
